--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,10 @@ add_subdirectory(src)
 
 # The executable code is here
 add_subdirectory(examples)
-
+message(INFO "CMake Project name: ${CMAKE_PROJECT_NAME}, Project name: ${PROJECT_NAME}")
 # Testing only available if this is the main project
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND TESTS)
+#if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND TESTS)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME) 
     enable_testing()
     add_subdirectory(tests)
 endif()
