--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,7 @@ add_subdirectory(src)
 add_subdirectory(examples)
 message(INFO "CMake Project name: ${CMAKE_PROJECT_NAME}, Project name: ${PROJECT_NAME}")
 # Testing only available if this is the main project
-#if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND TESTS)
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME) 
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND TESTS)
     enable_testing()
     add_subdirectory(tests)
 endif()
