--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,18 @@
-language:  
- - ruby
-rvm:
- - 2.2
- - jruby
+language:
+ - cpp
+sudo: false
+dist: trusty
+os:
+ - linux
+    addons: &1
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - gcc-7
+          - g++-7
+        env:
+          - CMAKE_VERSION="3.12.1"
+          - CMAKE_GENERATOR="Unix Makefiles"
+          - BUILDFLAGS="VERBOSE=1"
+
