Change source directory to dot for cmake command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language:
  - cpp
 dist: xenial
 before_script:
-   cmake -S blindij/testdrivendev -B.build
+   cmake -S . -B.build
 script:
    cd .build
    make 
