Add hyphens before script commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language:
  - cpp
 dist: xenial
 before_script:
-   cmake -S . -B.build
+   - cmake -S . -B.build
 script:
-   cd .build
-   make 
-   pwd
+   - cd .build
+   - make 
+   - pwd
