Enable building and execution of the tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language:
  - cpp
 dist: xenial
 before_script:
-   - cmake -S . -B.build
+   - cmake -S . -B.build -DTESTS=TRUE
 script:
    - cd .build
    - make 
-   - pwd
+   - ctest
